--- a/stable-coin-paper/bib/stablecoinRef.bib
+++ b/stable-coin-paper/bib/stablecoinRef.bib
@@ -53,3 +53,26 @@
 	Title = {Stablecoins: designing a price-stable cryptocurrency},
 	Note = {Accessed: 2018-09-03},
 	Year = {2018}}
+
+
+@article{gemini,
+	title={The Gemini Dollar: A Regulated Stable Value Coin},
+	author={Gemini Trust Company, LLC},
+	year={2018}
+}
+
+@misc{geminiCoindesk,
+	Author ={ Nikhilesh De},
+	Howpublished = {\url{ https://www.coindesk.com/gemini-launches-nydfs-regulated-crypto-pegged-to-the-dollar/}},
+	Title = {Gemini Launches NYDFS-Regulated Crypto Pegged to the Dollar},
+	Note = {Accessed: 2018-09-10},
+	Year = {2018}}
+
+
+@misc{paxosCoindesk,
+	Author = {Nikhilesh De},
+	Howpublished = {\url{ https://www.coindesk.com/paxos-unveils-dollar-backed-stablecoin-approved-by-new-york-regulator/}},
+	Title = {Paxos Unveils Dollar-Backed Stablecoin Approved by New York Regulator},
+	Note = {Accessed: 2018-09-10},
+	Year = {2018}}
+	
