Short notes on possible sections based on the prev meeting

--- a/stable-coin-paper/sections/main.tex
+++ b/stable-coin-paper/sections/main.tex
@@ -1,4 +1,17 @@
-\section{Related Work}
-%%https://gemini.com/wp-content/themes/gemini/assets/img/dollar/gemini-dollar-whitepaper.pdf
+\section{Introduction}
+\textit{What is stable coin?:}
+Define what 'stability' means
+
+\section{Problems that stable coin addresses}
+
+\subsection{Lending:}
+Talk about lending and other possible problems that stable coins may solve.
+
+\textit{Other possible solutions to lending:} While stable coin is one of them what can be the other possible solutions?
+
+\section{Comparison of stable coins}
+Define the properties that are considered during the design of stable coins. 
+
+%%https://gemini.com/wp-content/themes/gemini/assets/img/dollar/gemini-dollar-whitepaper.pdf -> ref
 
 
