More notes + latex file fix

--- a/stable-coin-paper/sections/stablecoin.tex
+++ b/stable-coin-paper/sections/stablecoin.tex
@@ -1,10 +1,28 @@
+% !TEX root = ../main.tex
 \section{Introduction}
+
 \textit{What is stable coin?:}
 Define what 'stability' means
 
+
+\section{The current state of the stable coins} % need to be paraphrized
+
+we can sort stablecoins into three categories: fiat-collateralized, crypto-collateralized, and non-collateralized.
+
+1) Fiat-collateralized stablecoins - These are pegged, generally 1:1, to a fiat currency?they maintain value because every unit of stablecoin is ?backed? by a unit of fiat. So, hypothetically, you can always exchange 1 stablecoin for 1 fiat, and so their values converge. The most popular (though I use this term loosely) fiat-collateralized stablecoin is Tether.
+2) Crypto-collateralized stablecoins - These use smart contracts to ?lock up? other cryptocurrencies in a smart contract, which then backs the stablecoin. While the stablecoin in this case has to be overcollateralized to compensate for other cryptocurrencies? volatility, in theory you can always liquidate your stablecoin for other cryptocurrency. MakerDAO is the most prominent of these stablecoins.
+3) Non-collateralized stablecoins - These algorithmically manipulate supply and demand to maintain the price. In essence, it acts as an automated central bank, a rudder that manns itself. Basis is the early leader in this pack.
+
+
+
+
+
 \section{Problems that stable coin addresses}
 
-\subsection{Lending:}
+\subsection{Government Surveillance}
+Stablecoins carry several advantages over govtcoins. For one, since stablecoins are not ?issued? by nation states, users do not have to worry about government surveillance. In countries helmed by oppressive governments, decentralized stablecoins could still be popular for this reason. Additionally, it?s reasonable to project that if governments can program their currencies, taxes will be built into the govtcoin. If people or entities wish to avoid taxes, they could choose to stash their capital in decentralized stablecoins over currency havens or other govtcoins (though this is obviously not recommended - ?always pay your doctor and the IRS?). Finally, stablecoins also offer potentially easier access as governments might attempt to restrict ownership of their cryptocurrencies to own-country citizens.
+
+\subsection{Lending}
 Talk about lending and other possible problems that stable coins may solve.
 
 \textit{Other possible solutions to lending:} While stable coin is one of them what can be the other possible solutions?
