Lending and the comparison sections

--- a/stable-coin-paper/bib/stablecoinRef.bib
+++ b/stable-coin-paper/bib/stablecoinRef.bib
@@ -18,7 +18,7 @@
 	Title = {Stablecoins - everything you need to know},
 	Note = {Accessed: 2018-07-09},
 	Year = {2018}}
- 
+
 @misc{cointelegraph,
 	Author = {Marie Huillet},
 	Howpublished = {\url{ https://cointelegraph.com/news/ibm-backs-new-us-dollar-pegged-stablecoin-that-runs-on-stellar-network}},
@@ -75,4 +75,9 @@
 	Title = {Paxos Unveils Dollar-Backed Stablecoin Approved by New York Regulator},
 	Note = {Accessed: 2018-09-10},
 	Year = {2018}}
+
+@article{okoyetoward,
+  title={Toward Cryptocurrency Lending},
+  author={Okoye, Mildred Chidinma and Clark, Jeremy}
+}
 	
