--- a/stable-coin-paper/sections/stablecoin.tex
+++ b/stable-coin-paper/sections/stablecoin.tex
@@ -23,12 +23,45 @@ we can sort stablecoins into three categories: fiat-collateralized, crypto-colla
 Stablecoins carry several advantages over govtcoins. For one, since stablecoins are not ?issued? by nation states, users do not have to worry about government surveillance. In countries helmed by oppressive governments, decentralized stablecoins could still be popular for this reason. Additionally, it?s reasonable to project that if governments can program their currencies, taxes will be built into the govtcoin. If people or entities wish to avoid taxes, they could choose to stash their capital in decentralized stablecoins over currency havens or other govtcoins (though this is obviously not recommended - ?always pay your doctor and the IRS?). Finally, stablecoins also offer potentially easier access as governments might attempt to restrict ownership of their cryptocurrencies to own-country citizens.
 
 \subsection{Lending}
-Talk about lending and other possible problems that stable coins may solve.
+~\textblue{Talk about lending and other possible problems that stable coins may solve. }
+
+One of the main challenges observed in lending is  monetary instability~\cite{okoyetoward}. The volatile nature of fiat currencies or the cryptocurrencies pose a risk to both the cash taker and the cash provider. The increase in the value of the currency will cause the cash taker to owe more than the initial amount. On the other hand, if there is a decrease in the value, the cash provider will end up receiving an amount less than he/she lent.
+
+
+
+\textit{Other possible solutions to lending:} ~\textblue{While stable coin is one of them what can be the other possible solutions?}
+
+\textblue{Taken from ~\cite{okoyetoward}, paraphrasing needed!}
+Addressing monetary instability:
+\begin{itemize}
+	\item The rate of release of new currency into the system could be modified to en-
+	able new currency to be introduced at (i) a more insightful rate or (ii) based
+	on some internal metrics of the system like number of transactions. [Remark:
+	an insightful rate has been elusive despite many alt-coins customizing the
+	schedule and it is difficult to see how metrics could not be gamed].
+	\item A cryptocurrency can also use explicit pegging but it is no better suited to this system than standard currencies. 
+	\item A central bank could manage currency circulation while allowing other as-
+	pects to be decentralized. [	Remark:Central banks have been historically
+	unsuccessful at using money circulation as a target].
+	\item The loan could be use the cryptocurrency as the medium of exchange but
+	use a stable (e.g.,	government) currency as the unit of account.
+\end{itemize}
 
 \textit{Other possible solutions to lending:} While stable coin is one of them what can be the other possible solutions?
 
 \section{Comparison of stable coins}
-Define the properties that are considered during the design of stable coins. 
+Define the properties that are considered during the design of stable coins.
+~\textblue{Collateralization info from ~\cite{bitmex}, decide which projects to choose that exemplify each category best.}
+\begin{table}[]
+	\begin{tabular}{|l|l|l|l|}
+		\hline
+		& Collateralization (+ the value of the collateral) & Price Oracle   \\ \hline
+		BitShares (BitUSD) &  Crypto-collateralized &  -  \\ \hline
+		BitBay & Non-collateralized &   \\ \hline
+		 &   &   \\ \hline
+	\end{tabular}
+\end{table}
+
 
 %%https://gemini.com/wp-content/themes/gemini/assets/img/dollar/gemini-dollar-whitepaper.pdf -> ref
 
