Notes from the meeting

--- a/stable-coin-paper/sections/stablecoin.tex
+++ b/stable-coin-paper/sections/stablecoin.tex
@@ -1,11 +1,14 @@
 % !TEX root = ../main.tex
-\section{Introduction}
+\section{Introduction} 
+Very quick introduction to blockchain/crypto
+What is stability vs volatility.
 
-\textit{What is stable coin?:}
-Define what 'stability' means
 
 
-\section{The current state of the stable coins} % need to be paraphrized
+
+\section{The current state of the stable coins} % Didem :
+
+%different ways and issues with each.
 
 we can sort stablecoins into three categories: fiat-collateralized, crypto-collateralized, and non-collateralized.
 
@@ -17,8 +20,8 @@ we can sort stablecoins into three categories: fiat-collateralized, crypto-colla
 
 
 
-\section{Problems that stable coin addresses}
-
+\section{Problems that stable coin addresses} %Mahsa:
+% + their alternative solutions:
 \subsection{Government Surveillance}
 Stablecoins carry several advantages over govtcoins. For one, since stablecoins are not ?issued? by nation states, users do not have to worry about government surveillance. In countries helmed by oppressive governments, decentralized stablecoins could still be popular for this reason. Additionally, it?s reasonable to project that if governments can program their currencies, taxes will be built into the govtcoin. If people or entities wish to avoid taxes, they could choose to stash their capital in decentralized stablecoins over currency havens or other govtcoins (though this is obviously not recommended - ?always pay your doctor and the IRS?). Finally, stablecoins also offer potentially easier access as governments might attempt to restrict ownership of their cryptocurrencies to own-country citizens.
 
@@ -49,7 +52,7 @@ Addressing monetary instability:
 
 \textit{Other possible solutions to lending:} While stable coin is one of them what can be the other possible solutions?
 
-\section{Comparison of stable coins}
+\section{Comparison Framework} % Put the code for the framework
 Define the properties that are considered during the design of stable coins.
 ~\textblue{Collateralization info from ~\cite{bitmex}, decide which projects to choose that exemplify each category best.}
 \begin{table}[]
@@ -62,7 +65,7 @@ Define the properties that are considered during the design of stable coins.
 	\end{tabular}
 \end{table}
 
-
+\section{Discussion}
 %%https://gemini.com/wp-content/themes/gemini/assets/img/dollar/gemini-dollar-whitepaper.pdf -> ref
 
 
