More explanations in section 2 and 4

--- a/stable-coin-paper/bib/stablecoinRef.bib
+++ b/stable-coin-paper/bib/stablecoinRef.bib
@@ -80,4 +80,13 @@
   title={Toward Cryptocurrency Lending},
   author={Okoye, Mildred Chidinma and Clark, Jeremy}
 }
+
+@article{sams2015note,
+	title={A Note on Cryptocurrency Stabilisation: Seigniorage Shares},
+	author={Sams, Robert},
+	journal={Brave New Coin},
+	pages={1--8},
+	year={2015}
+}
+
 	
