--- a/stable-coin-paper/sections/stablecoin.tex
+++ b/stable-coin-paper/sections/stablecoin.tex
@@ -1,8 +1,8 @@
 % !TEX root = ../main.tex
-\section{Introduction} 
+\section{Introduction}
 Very quick introduction to blockchain/crypto
 What is stability vs volatility.
-
+About coin supply and volatility~\cite{sams2015note}.
 
 
 
@@ -13,8 +13,17 @@ What is stability vs volatility.
 we can sort stablecoins into three categories: fiat-collateralized, crypto-collateralized, and non-collateralized.
 
 1) Fiat-collateralized stablecoins - These are pegged, generally 1:1, to a fiat currency?they maintain value because every unit of stablecoin is ?backed? by a unit of fiat. So, hypothetically, you can always exchange 1 stablecoin for 1 fiat, and so their values converge. The most popular (though I use this term loosely) fiat-collateralized stablecoin is Tether.
+
+Ex: dollar-pegged tokens(Tether and TrueUSD)
+This type of stable coins need to rely on a third party, as the tokens need to be backed up by the money that is kept in a certain account~\cite{techrev}. Centralised cryptocurrencies backed by gold (slow increas in the value). ex: Digix Gold Token
+
+Discussion about centralization: "Centralised monetary systems can refuse to give you your money. Tether: "redemptions will not be unreasonably denied, but we reserve the right to selectively deny redemption and creation of Tethers on a case-by-case basis." Globcoin: less reliance on US dollars but still centralized.~\cite{cryptoinsider}
+
 2) Crypto-collateralized stablecoins - These use smart contracts to ?lock up? other cryptocurrencies in a smart contract, which then backs the stablecoin. While the stablecoin in this case has to be overcollateralized to compensate for other cryptocurrencies? volatility, in theory you can always liquidate your stablecoin for other cryptocurrency. MakerDAO is the most prominent of these stablecoins.
+
 3) Non-collateralized stablecoins - These algorithmically manipulate supply and demand to maintain the price. In essence, it acts as an automated central bank, a rudder that manns itself. Basis is the early leader in this pack.
+
+The dual-token model — stablecoins and shares One token is stable, and the other is used to whip it back onto the narrow track. Roughly, the idea is that supply of the stable token is dynamically increased and decreased. ex: Basis, Carbon. Then the dual-token model has two flavours: the kind where the stable token is created by locking up other crypto (e.g. DAI and Havven), and the kind where it is not (e.g. Basis, Carbon). ~\cite{cryptoinsider}
 
 
 
@@ -42,7 +51,7 @@ Addressing monetary instability:
 	on some internal metrics of the system like number of transactions. [Remark:
 	an insightful rate has been elusive despite many alt-coins customizing the
 	schedule and it is difficult to see how metrics could not be gamed].
-	\item A cryptocurrency can also use explicit pegging but it is no better suited to this system than standard currencies. 
+	\item A cryptocurrency can also use explicit pegging but it is no better suited to this system than standard currencies.
 	\item A central bank could manage currency circulation while allowing other as-
 	pects to be decentralized. [	Remark:Central banks have been historically
 	unsuccessful at using money circulation as a target].
@@ -56,14 +65,19 @@ Addressing monetary instability:
 Define the properties that are considered during the design of stable coins.
 ~\textblue{Collateralization info from ~\cite{bitmex}, decide which projects to choose that exemplify each category best.}
 \begin{table}[]
-	\begin{tabular}{|l|l|l|l|}
+	\begin{tabular}{|l|l|l|l|l|}
 		\hline
-		& Collateralization (+ the value of the collateral) & Price Oracle   \\ \hline
-		BitShares (BitUSD) &  Crypto-collateralized &  -  \\ \hline
-		BitBay & Non-collateralized &   \\ \hline
-		 &   &   \\ \hline
+		& Collateralization (+ the value of the collateral) & Price Oracle & Centralization  \\ \hline
+		BitShares (BitUSD) &  Crypto-collateralized &  No & \\ \hline
+		BitBay & Non-collateralized & &  \\ \hline
+		 DAI& Crypto-collateralized (ETH)  &  Yes& \\ \hline
+		 BitShares&Crypto-collateralized&Yes&\\ \hline
+		 Basis&Non-collateralized&& \\ \hline
 	\end{tabular}
 \end{table}
+
+Decentral price oracle and Schelling point~\cite{cryptoinsider}
+DAI and Bitshares~\cite{cryptoinsider}
 
 \section{Discussion}
 %%https://gemini.com/wp-content/themes/gemini/assets/img/dollar/gemini-dollar-whitepaper.pdf -> ref
