Section 2 and new references

--- a/stable-coin-paper/bib/stablecoinRef.bib
+++ b/stable-coin-paper/bib/stablecoinRef.bib
@@ -89,4 +89,16 @@
 	year={2015}
 }
 
-	
+@misc{comprehensiveOverview,
+	Author = {CP Processor TEAM},
+	Howpublished = {\url{ https://medium.com/cp-processor/comprehensive-overview-of-stablecoins-819d183f6ac7}},
+	Title = {Comprehensive overview of STABLECOINS},
+	Note = {Accessed: 2018-01-15},
+	Year = {2018}}
+
+@misc{overview,
+	Author = {Christopher Durr},
+	Howpublished = {\url{ https://hackernoon.com/overview-of-stablecoins-2e4ffef82a73}},
+	Title = {Overview of Stablecoins},
+	Note = {Accessed: 2018-01-15},
+	Year = {2018}}	
