--- a/stable-coin-paper/bib/stablecoinRef.bib
+++ b/stable-coin-paper/bib/stablecoinRef.bib
@@ -102,3 +102,10 @@
 	Title = {Overview of Stablecoins},
 	Note = {Accessed: 2018-01-15},
 	Year = {2018}}	
+
+@misc{linkedin,
+	Author = {Sunny Dhillon},
+	Howpublished = {\url{ https://www.linkedin.com/pulse/stablecoins-vs-govtcoins-race-solve-cryptocurrencies-price-dhillon}},
+	Title = {Stablecoins vs. Govtcoins: The Race to Solve Cryptocurrencies’ Price Volatility Problems},
+	Note = {Accessed: 2018-10-29},
+	Year = {2018}}	
