Section 3 + notes here and there

--- a/stable-coin-paper/bib/stablecoinRef.bib
+++ b/stable-coin-paper/bib/stablecoinRef.bib
@@ -102,3 +102,12 @@
 	Title = {Overview of Stablecoins},
 	Note = {Accessed: 2018-01-15},
 	Year = {2018}}	
+
+@incollection{smithin2002money,
+  title={What is money? Introduction},
+  author={Smithin, John},
+  booktitle={What is Money?},
+  pages={11--25},
+  year={2002},
+  publisher={Routledge}
+}
