--- a/stable-coin-paper/sections/stablecoin.tex
+++ b/stable-coin-paper/sections/stablecoin.tex
@@ -6,9 +6,21 @@ About coin supply and volatility~\cite{sams2015note}.
 Short-term stability is important for transactions and long-term stability is important for holding`\cite{forbes}.
 
 
+currencies are judged by their ability to serve three functions???as a medium of exchange, a unit of account, and a store of value. To successfully serve these functions, a currency must be easily and broadly usable (necessary for being a medium of exchange) and demonstrate at least some level of value stability (necessary for acting as a unit of account and store of value).
+
+%For the paper let's have a section under preliminaries and talk about what is money?where does it come from?
+%useful articles for this topic:
+%https://www.imf.org/external/pubs/ft/fandd/2012/09/basics.htm
+%https://www.imf.org/external/pubs/ft/fandd/2010/03/basics.htm
+
 \section{The current state of the stable coins} % Didem :
 
 %different ways and issues with each.
+
+
+
+
+
 
 we can sort stablecoins into three categories: fiat-collateralized, crypto-collateralized, and non-collateralized.
 
@@ -37,15 +49,68 @@ The main non-collateralized approach is the seigniorage shares method. The seign
 
 
 
-\section{Problems that stable coin addresses} %Mahsa:
-% + their alternative solutions:
+\section{Problems that stable coin addresses}
+As mentioned in the ..., currencies can serve as a store of value, a unit of account, and a medium of exchange~\cite{smithin2002money}. In order to serves as a unit of account and store of value, currencies have to denote a minimum level of value stability. In this regard, stable coins are proposed to provide store of value and unit of account functionalities, due to their non-fluctuating value in terms of fiat currencies or any other alternative. In addition, they purport to solve a group of critical issues that were introduced when using cryptocurrencies introduce. In this section, we discuss these issues. 
+
+\subsection{Lending with Cryptocurrencies} 
+Despite quite a few blockchain applications in financial technologies, there has been little deployment of lending. One of the main challenges with the lending that makes it difficult to be deployed on the blockchains is the monetary instability observed in the the existing cryptocurrencies~\cite{okoyetoward}. This volatility has led the existing cryptocurrencies to be used more as speculative investments instead of serving as store of value and unit of account. In a lending situation with volatile currencies, where their value is being depreciated or appreciated over time, the cash taker will eventually owe more than what he has borrowed or the vice versa. Therefore, the volatility in the value of cryptocurrencies cause serious concerns and difficulties both for cash takers and cash providers~\cite{okoyetoward}. In the contrast, lending perfectly works if a loan is done with a stable cryptocurrency, whose value remains stable over the time. 
+
+
 \subsection{Government Surveillance}
-Stablecoins carry several advantages over govtcoins. For one, since stablecoins are not ?issued? by nation states, users do not have to worry about government surveillance. In countries helmed by oppressive governments, decentralized stablecoins could still be popular for this reason. Additionally, it?s reasonable to project that if governments can program their currencies, taxes will be built into the govtcoin. If people or entities wish to avoid taxes, they could choose to stash their capital in decentralized stablecoins over currency havens or other govtcoins (though this is obviously not recommended - ?always pay your doctor and the IRS?). Finally, stablecoins also offer potentially easier access as governments might attempt to restrict ownership of their cryptocurrencies to own-country citizens.
 
-\subsection{Lending}
-~\textblue{Talk about lending and other possible problems that stable coins may solve. }
+Governments have recently started examining  the idea of issuing a central bank-issued digital currency (CBDC). These national digital currencies are regulated by a federal regulators instead of being in a form of  decentralized currencies where only the owner has the sole control and ownership of the assets. CBDCs are not backed by any tangible assets and are issued by central banks so that they could keep their monetary policy while adopting the trend of digital assets. However, an oppressive government may abuse these assets to manipulate the markets or to limit the ownership of these assets to  a special group of people (\eg citizens of that specific country). However, since stable coins are not backed by any central party and financial regulator, users are assured about the stability as well as having easier access no matter where they live and/or come from.
 
-One of the main challenges observed in lending is  monetary instability~\cite{okoyetoward}. The volatile nature of fiat currencies or the cryptocurrencies pose a risk to both the cash taker and the cash provider. The increase in the value of the currency will cause the cash taker to owe more than the initial amount. On the other hand, if there is a decrease in the value, the cash provider will end up receiving an amount less than he/she lent.
+
+
+% nation issued digital assets can be 
+%
+%After all, fiat currencies are not backed by any tangible assets. You can?t return the currency to the government in exchange for a bar of gold or silver, a can of beans, a pack of cigarettes, or any other items that might have value to you. Fiat currencies are backed by the full faith and credit of the government that issued them and nothing more. If you want gold, silver, beans, or smokes you need to exchange your fiat currency with a person or entity that possesses the item that you want.
+%
+%Read more: Why Governments Are Afraid of Bitcoin | Investopedia https://www.investopedia.com/articles/forex/042015/why-governments-are-afraid-bitcoin.asp#ixzz5VLsy6DKS 
+%Follow us: Investopedia on Facebook
+%
+%
+%The reason is tha due tokeep their monetary poli and power.
+%
+%
+%
+%
+%The concept of CBDCs, or national digital currencies ? the scenario in which the trend of digital currencies gets adopted by a federal regulator, essentially under its rules, with the central bank issuing digital fiat money, rather than cryptocurrencies in their most popular, decentralized form and becomes not only a regulator, but clients? account holder as well ? has attracted many governments across the world. Some of them have already implemented the idea, some keep researching, while others ? like Germany ? have dismissed the idea altogether. Here?s a list of those countries along with their reasonings for/against CBDCs.
+%
+%
+%For the most avid supporters of digital currencies like Bitcoin, the idea of having a central banking system goes against everything they believe. After all, Bitcoin was created as a means for people to ditch the banking system and allow them the freedom to handle their own financial affairs.
+%
+%The most pressing reason for a government to launch a cryptocurrency is the success of private cryptocurrencies. This isn?t out of some misplaced sense of competition, but rather because governments would be loathe to lose control of their nation?s monetary policy. When asked about the potential governmental response to cryptocurrencies, former IMF Chief Economist Kenneth Rogoff?s response was, ?When it comes to the monetary system, the government makes the rules. You cannot win the game. If they're not winning, they will change the rules.? If this doesn?t mean stringent regulations?and governments so far have been much more concerned about the scammy or bubbly elements of the crypto world than its capacity for toppling fiat?it could mean govtcoins.
+%
+%
+%Stablecoins carry several advantages over govtcoins. For one, since stablecoins are not ?issued? by nation states, users do not have to worry about government surveillance. In countries helmed by oppressive governments, decentralized stablecoins could still be popular for this reason.
+%
+%
+% Additionally, it?s reasonable to project that if governments can program their currencies, taxes will be built into the govtcoin. If people or entities wish to avoid taxes, they could choose to stash their capital in decentralized stablecoins over currency havens or other govtcoins (though this is obviously not recommended - ?always pay your doctor and the IRS?). 
+%
+%
+%Finally, stablecoins also offer potentially easier access as governments might attempt to restrict ownership of their cryptocurrencies to own-country citizens.
+
+
+
+%https://www.bis.org/cpmi/publ/d174.pdf
+%https://www.bankofcanada.ca/wp-content/uploads/2017/11/sdp2017-16.pdf
+
+
+\subsection{Promoting Trust in the Crypto Space}
+
+%to be completed >> @Mahsa
+
+%their value is designed not to fluctuate 
+%
+%
+%
+%Trust: In addition to fostering trust in cryptocurrencies, the other main aim of the Gemini dollar is to promote the use of coins that operate on blockchain. Right now, the main reason people put money in cryptocurrencies is to make more money. ?When something is a store of value, you generally don?t want to spend it,? Tyler Winklevoss told Business Insider. With stablecoins, there?s no money-making incentive. People who buy them will do so presumably for the unique advantages transacting with cryptocurrencies provides, like seamlessly (and fee-lessly) sending money overseas.
+%
+%
+%
+%https://medium.com/@usdx/five-issues-confronting-stablecoins-for-the-rest-of-2018-75245820fdb5
+
 
 
 
@@ -88,6 +153,16 @@ Define the properties that are considered during the design of stable coins.
 
 Decentral price oracle and Schelling point~\cite{cryptoinsider}
 DAI and Bitshares~\cite{cryptoinsider}
+
+\section{Critical Issues with Stable Coins}
+
+--Most stable coins fail (this is historically true, it doesn?t speak to the current stable coins). When they fail, they may or may not be redeemable for the promised amount. That is the harsh truth. None of the old stable coins are with us today aside from Nubits?. and Nubits has recently been trading for under .50 cents here in late March 2018. TUSD, Tether, and Dia all seem solid in there here and now, and they likely have learned from the mistakes of their formers, but if we are being honest about the history of stable coins, it is as volatile as the history of crypto itself.
+
+--Some say that stable coins bring stability to the crypto space, but that idea doesn?t seem to be empirically proven. Instead, I?d argue that the perks of stable coins are in the ability for traders to go to a dollar quickly and the ability of exchanges to increase liquidity. Further, I?d argue that stable coins actually add volatility to the crypto space, because they allow for more speculation (which in theory creates stability, but which in practice hasn?t really seemed to do anything of the sort). The bottom line on this point is that the crypto space isn?t a stable place, and no type of cryptocurrency, regulation, or derivative I?ve seen has yet to change that (so here the point is, let us not give credit where it is not due). The term used is ?stable coin? or ?price-stable cryptocurrency,? not because this coin brings stability, but because the token ideally holds a stable value.
+
+--Stable coins generally require us to trust a central third party. Each stable coin has its own way around being overly centralized, but there generally needs to be some way to manage these assets to ensure their stability (even though they tend to be blockchain based). Anything centralized requires the trust of a third party to some extent. Requiring the trust of a third party in crypto goes against the concept of crypto somewhat. This isn?t a problem per-say, but it is worth noting. With that said, most exchanges aren?t decentralized and thus using a stable coin as a currency on an already centralized exchange is hardly the a reason not to use stable coins (or exchanges).
+
+
 
 \section{Discussion}
 %%https://gemini.com/wp-content/themes/gemini/assets/img/dollar/gemini-dollar-whitepaper.pdf -> ref
