references +edits on Section 3

--- a/stable-coin-paper/bib/stablecoinRef.bib
+++ b/stable-coin-paper/bib/stablecoinRef.bib
@@ -103,7 +103,7 @@
 	Note = {Accessed: 2018-01-15},
 	Year = {2018}}	
 
-<<<<<<< HEAD
+
 @incollection{smithin2002money,
   title={What is money? Introduction},
   author={Smithin, John},
@@ -112,11 +112,16 @@
   year={2002},
   publisher={Routledge}
 }
-=======
+
 @misc{linkedin,
 	Author = {Sunny Dhillon},
 	Howpublished = {\url{ https://www.linkedin.com/pulse/stablecoins-vs-govtcoins-race-solve-cryptocurrencies-price-dhillon}},
 	Title = {Stablecoins vs. Govtcoins: The Race to Solve Cryptocurrencies’ Price Volatility Problems},
 	Note = {Accessed: 2018-10-29},
 	Year = {2018}}	
->>>>>>> 4ac14570c2ebb7ef95139d8255d2aaa860fd5392
+
+@article{barrdear2016macroeconomics,
+  title={The macroeconomics of central bank issued digital currencies},
+  author={Barrdear, John and Kumhof, Michael},
+  year={2016}
+}
